@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-08-10T16:34:50Z",
+  "timestamp" : "2022-08-11T08:27:10Z",
   "count_outdated" : 723,
   "uniques_outdated" : 377,
-  "count" : 751,
+  "count" : 750,
   "uniques" : 392,
   "clones" : [
     {
       "timestamp": "2022-07-28T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
