@@ -1,3 +1,10 @@
+2022-08-11T08:27:10Z:
+* notice: last 14d: unq all: 3 27
+* notice: prev accum: outdated-unq outdated-all / unq all: 377 723 / 392 751
+* notice: next accum: outdated-unq outdated-all / unq all: 377 723 / 392 750
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-07-28]
+
 2022-08-10T16:34:50Z:
 * notice: last 14d: unq all: 3 28
 * notice: prev accum: outdated-unq outdated-all / unq all: 375 719 / 391 748
